Fixed page icons and icon spacing

--- a/content/css/less/smart.less
+++ b/content/css/less/smart.less
@@ -274,7 +274,7 @@ header {
 }
 
 #page-title i {
-  margin: -6px 2px -5px -18px;
+  margin: -6px 10px -5px -18px;
   padding: 0px;
 }
 
@@ -284,6 +284,10 @@ header {
   color: #fff;
   padding: 10px 20px 5px 20px;
   font-size: 30px;
+}
+
+#page-title h2.without-icon{
+  padding-left:0;
 }
 
 #page-title span {
